fix: extra line break in spacing conversion.
This also includes handling invalid values in the spacing item.

--- a/css/imports/classes.css
+++ b/css/imports/classes.css
@@ -163,7 +163,10 @@ body.select-costum ::selection {
    ========================================= */
 .osu-style a {
   color: rgb(217, 166, 189) !important;
-  font-weight: 400;
+}
+
+.osu-style strong a {
+  font-weight: 700;
 }
 
 .osu-style details summary {
